# research_agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
examples/: cursor_vs_windsurf_report.json  cursor_vs_windsurf_report.md  gemini_failure_fallback_report.md  gemini_generatecontent_fallback_report.md
src/research_agent/: __init__.py  api.py  citation_checker.py  cli.py  config.py  embeddings.py  extractor.py  fastapi_server.py  gemini_client.py  llm_synthesizer.py  mock_data.py  models.py  openai_client.py  pipeline.py  planner.py  reader.py  searcher.py  service.py  storage.py  synthesizer.py  vector_store.py  web_server.py
src/research_agent/web/: app.js  index.html  styles.css
tests/: test_pipeline.py
