[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent-mvp"
version = "0.1.0"
description = "A citation-grounded research agent MVP with a CLI and mock research pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Research Agent Project" }
]
dependencies = []

[project.optional-dependencies]
web = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0"
]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
research-agent = "research_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
