[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent-mvp"
version = "0.1.0"
description = "A citation-grounded research agent MVP with a CLI and mock research pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Research Agent Project" }
]
dependencies = [
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
web = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0"
]
reader = [
  "trafilatura>=1.9.0",
  "readability-lxml>=0.8.1",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0"
]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
research-agent = "research_agent.cli:main"
research-agent-web = "research_agent.web_server:main"
research-agent-fastapi = "research_agent.fastapi_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
research_agent = ["web/*"]
